--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular2-material/card": "^2.0.0-alpha.8-3",
     "@angular2-material/core": "^2.0.0-alpha.8-3",
     "@angular2-material/icon": "^2.0.0-alpha.8-3",
+    "angular-froala-wysiwyg": "^1.0.0",
     "angular2-flash-messages": "^1.0.8",
     "angularfire2": "^4.0.0-rc.1",
     "core-js": "^2.4.1",
