--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.4",
+    "@angular/cli": "^1.3.2",
     "@angular/compiler-cli": "^4.0.0",
     "@types/gsap": "^1.19.1",
     "@types/hammerjs": "^2.0.34",
